Author: Shiro Takeda
Maintainer: Shiro Takeda
Time-stamp: <2016-03-06 00:04:51 st>
----------------------------------------------------

Change logs of GAMS mode.
----------------------------------------------------

Version 6.0.1 ()
----------------------------------

* Modified GAMS-TEMPLATE mode.

* Modified the format of "gams-template.txt" (`gams-template-file') which
  stores templates. The previous gams-template.txt is not compatible with
  the current GAMS-TEMPLATE mode. You need to recreate the new
  "gams-template.txt" or replace the old one with the new sample template
  file.


Version 6.0 (2016-03-02)
----------------------------------

* Note: Important changes have been added to this version of GAMS
  mode. Read the explanation below carefully and change your
  configurations in init.el file.

* Changed the name of the main lisp code from "gams.el" to "gams-mode.el".

* The name of feature provided by gams-mode.el changed from gams to
  gams-mode. So you need to use (require 'gams-mode) instead of (require 'gams).

* Changed the name of variables and functions whose prefix is "gams*" or
  "gams:". Now all variables and functions defined in gams-mode.el have
  prefix "gams-". As a result of this change, names of the following
  customizable variables changed.

  Old name                         New name   
  `gams:process-command-name'   -> `gams-process-command-name'
  `gams:process-command-option' -> `gams-process-command-option'

  You need to modify init.el setting.

* Change the default value of variables `gams-statement-file' and
  `gams-template-file'.

  gams-statement-file -> "~/.emacs.d/gams-statement.txt"
  gams-template-file -> "~/.emacs.d/gams-template.txt"


Version 5.0 (2016-02-03)
----------------------------------

* Suppose that you have a code like

  	$setglobal sub_program sub_program_default.gms

  	$include %sub_program%

  With this code, GAMS reads the content of sub_program_default.gms